[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
authors = [{name = "Anton Zhiyanov", email = "m@antonz.org"}]
classifiers = ["License :: OSI Approved :: zlib/libpng License"]
dynamic = ["version", "description"]
license = {file = "LICENSE"}
name = "sqlean.py"
readme = "README.md"

[project.urls]
Home = "https://github.com/nalgeon/sqlean.py"

[tool.flit.module]
name = "sqlean"
